# php-src

./: CMakeLists.txt  configure.in
Zend/: CMakeLists.txt  zend.c  zend.h  zend_API.c  zend_API.h  zend_ast.c  zend_ast.h  zend_attributes.c  zend_compile.c  zend_compile.h  zend_enum.c  zend_enum.h  zend_execute.c  zend_globals.h  zend_inheritance.c  zend_inheritance.h  zend_interfaces.c  zend_interfaces.h  zend_language_parser.y  zend_language_scanner.c  zend_language_scanner.l  zend_opcode.c  zend_string.c  zend_string.h  zend_types.h  zend_variables.c  zend_variables.h  zend_vm_def.h  zend_vm_execute.h  zend_vm_handlers.h  zend_vm_opcodes.c  zend_vm_opcodes.h
Zend/tests/: shortClosures_001.phpt  shortClosures_002.phpt  void001.phpt  void002.phpt  void003.phpt  void004.phpt
Zend/tests/enum/: compare001.phpt  compare002.phpt  compare003.phpt  equality001.phpt  equality002.phpt  switch001.phpt  switch002.phpt  typecheck001.phpt  typecheck002.phpt
Zend/tests/object_literals/: empty_literal.phpt
Zend/tests/return_types/: 008.phpt  generators003.phpt  inheritance005.phpt  inheritance006.phpt  inheritance007.phpt  null001.phpt  null002.phpt  null003.phpt  null004.phpt
Zend/tests/traits/parameterized/: dicitonary.phpt  dictionary.phpt  missing_type_arguments.phpt  parameter_type_and_instanceof.phpt  parameter_type_fails.phpt  return_type_and_new.phpt  return_type_fails.phpt  use_requires_type_arguments.phpt
ext/date/: php_date.c
ext/date/lib/: interval.c  parse_tz.c  timelib.c  timelib.h
ext/filter/: filter.c
ext/filter/tests/: bug67167.phpt
ext/reflection/: php_reflection.c
ext/spl/: php_spl.c  spl_array.c  spl_array.stub.php  spl_array_arginfo.h  spl_dllist.c  spl_exceptions.c  spl_exceptions.h  spl_fixedarray.c  spl_heap.c  spl_iterators.h  spl_observer.c
ext/spl/tests/BidirectionalArrayIterator/: ReverseIterator.inc  assoc.phpt  bidirectionaliterator.phpt  countable.phpt  empty.phpt  final.phpt  packed.phpt  rewindable.phpt
ext/spl/tests/ReverseArrayIterator/: assoc.phpt  countable.phpt  empty.phpt  final.phpt  packed.phpt  rewindable.phpt
ext/spl/tests/SplForwardArrayIterator/: final.phpt  iterator_001.phpt  iterator_002.phpt  iterator_004.phpt  refcount_001.phpt
ext/spl/tests/SplReverseArrayIterator/: final.phpt  iterator_004.phpt  refcount_001.phpt
ext/spl/tests/fixedarray/: map_01.phpt  map_02.phpt  map_03.phpt  slice_01.phpt  slice_02.phpt  slice_03.phpt  slice_04.phpt  slice_05.phpt
ext/standard/: CMakeLists.txt  array.c  basic_functions.c  php_array.h
